--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" href="./public/favicon.ico" />
-    <title>Youtube</title>
+    <title>YouTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
